# plebchatpipe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-searxng.yaml  kvcache.py  langgraph.json  plebchat_pipeline.py  pyproject.toml  quotes.py  requirements.txt  test  up-searxng
Modelfiles/: README.md  llama3
OLD_DISABLED/fren/: commands.py
OLD_RESEARCH/: Research.md  __init__.py  graph.py  nodes.py
research_OLD/: nodes.py  state.py
searxng/: settings.yml
src/: __init__.py  helpers.py  server.py
src/graphs/: __init__.py  commands.py  common.py  config.py  configuration.py
src/graphs/crab/: __init__.py  commands.py  state.py
src/graphs/echobot/: graph.py
src/graphs/example/: graph.py
src/graphs/fren/: VERSION.py  __init__.py  commands.py  graph.py  nodes.py  state.py
src/graphs/research/: VERSION.py  commands.py  graph.py  nodes.py
